# varnish-geoip-plugin

./: .gitignore  AUTHORS  COPYING  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.status  configure  configure.ac  libtool
src/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  geoip_plugin.c  geoip_plugin_test.c
src/.deps/: geoip_plugin.Plo  libgeoip_plugin_la-geoip_plugin.Plo
test/: Makefile  Makefile.am  Makefile.in  test_cases.txt  test_geoip_plugin.c
test/.deps/: test_geoip_plugin.Po
vcl/: Makefile  Makefile.am  Makefile.in  geoip_plugin.vcl  geoip_plugin.vcl.in
